--- a/build.yml
+++ b/build.yml
@@ -23,7 +23,7 @@ jobs:
 
   - task: PowerShell@2
     inputs: 
-      filePath: 'build.vs${{ parameters.visualStudioVersion }}.ps1'
+      filePath: format('build.vs{0}.ps1', parameters.visualStudioVersion)
       workingDirectory: ./
       arguments: Release
 
@@ -38,7 +38,7 @@ jobs:
 
 
   - task: PublishBuildArtifacts@1
-    displayName: 'Publish Artifact: SpecFlow.VisualStudio.VS${{ parameters.visualStudioVersion }}.CI-BuildResult'
+    displayName: format('Publish Artifact: SpecFlow.VisualStudio.VS{0}.CI-BuildResult', parameters.visualStudioVersion)
     inputs:
       PathtoPublish: ${{ parameters.artifactFileName }} 
 
