add parameter buildScript

--- a/build.yml
+++ b/build.yml
@@ -4,6 +4,7 @@ parameters:
   nugetVersion: 4.6.2
   sdkVersion: 2.1.401
   artifactFileName: ''
+  buildScript: ''
   artifactName: ''
   visualStudioVersion: ''
 
@@ -24,7 +25,7 @@ jobs:
 
   - task: PowerShell@2
     inputs: 
-      filePath: format('build.vs{0}.ps1', parameters.visualStudioVersion)
+      filePath: ${{ parameters.buildScript }}
       workingDirectory: ./
       arguments: Release
 
