--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ jobs:
     name: VS2015
     visualStudioVersion: 2015
     artifactName: 'SpecFlow.VisualStudio.VS2015.CI-BuildResult'
+    buildScript: 'build.vs2015.ps1'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VS2015.zip'
     pool:
       name: 'Hosted'
@@ -19,6 +20,7 @@ jobs:
     name: VS2017
     visualStudioVersion: 2017
     artifactName: 'SpecFlow.VisualStudio.VS2017.CI-BuildResult'
+    buildScript: 'build.vs2017.ps1'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VS2017.zip'
     pool:
       name: 'Hosted VS2017'
