--- a/build.yml
+++ b/build.yml
@@ -27,7 +27,9 @@ jobs:
     inputs: 
       filePath: ${{ parameters.buildScript }}
       workingDirectory: ./
-      arguments: Release
+      arguments:
+        - Release
+        - ${{ parameters.visualStudioVersion }}
 
     displayName: 'restore & build Release'
 
