change msbuild detection based on parameters

--- a/build.yml
+++ b/build.yml
@@ -27,9 +27,7 @@ jobs:
     inputs: 
       filePath: ${{ parameters.buildScript }}
       workingDirectory: ./
-      arguments:
-        - Release
-        - ${{ parameters.visualStudioVersion }}
+      arguments: Release ${{ parameters.visualStudioVersion }}
 
     displayName: 'restore & build Release'
 
