--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ jobs:
 - template: build.yml  
   parameters:
     name: VS2015
-    visualStudioVersion: 2015
+    visualStudioVersion: '2015'
     artifactName: 'SpecFlow.VisualStudio.VS2015.CI-BuildResult'
     buildScript: 'build.ps1'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VS2015.zip'
@@ -18,7 +18,7 @@ jobs:
 - template: build.yml  
   parameters:
     name: VS2017
-    visualStudioVersion: 2017
+    visualStudioVersion: '2017'
     artifactName: 'SpecFlow.VisualStudio.VS2017.CI-BuildResult'
     buildScript: 'build.ps1'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VS2017.zip'
