--- a/ItemTemplates/TechTalk.SpecFlow.VsIntegration.ItemTemplates.csproj
+++ b/ItemTemplates/TechTalk.SpecFlow.VsIntegration.ItemTemplates.csproj
@@ -139,6 +139,19 @@
       <OutputSubPath>SpecFlow</OutputSubPath>
       <SubType>Designer</SubType>
     </VSTemplate>
+    <VSTemplate Include="SpecFlowJson\SpecFlowJson_CSharp.vstemplate">
+      <SubType>Designer</SubType>
+      <OutputSubPath>SpecFlow</OutputSubPath>
+    </VSTemplate>
+    <VSTemplate Include="SpecFlowJson\SpecFlowJson_VB.vstemplate">
+      <SubType>Designer</SubType>
+      <OutputSubPath>SpecFlow</OutputSubPath>
+    </VSTemplate>
+    <VSTemplate Include="SpecFlowJson\SpecFlowJson_FSharp.vstemplate">
+      <SubType>Designer</SubType>
+      <OutputSubPath>SpecFlow</OutputSubPath>
+    </VSTemplate>
+    <Content Include="SpecFlowJson\SpecFlowStepDefinitionIcon.ico" />
     <Content Include="SpecFlowPlusRunner_Srprofile\SpecFlowStepDefinitionIcon.ico" />
     <Content Include="SpecFlowStepDefinition_CSharp\SpecFlowStepDefinition1.cs" />
     <VSTemplate Include="SpecFlowStepDefinition_FSharp\SpecFlowStepDefinition_FSharp.vstemplate">
@@ -195,6 +208,7 @@
     <None Include="SpecFlowFeature_Nederlands_VB\SpecFlowFeature1.feature" />
     <None Include="SpecFlowFeature_VB\SpecFlowFeature1.feature" />
     <Content Include="SpecFlowPlusRunner_Srprofile\Default.srprofile" />
+    <None Include="SpecFlowJson\specflow.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
