--- a/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator/packages.config
+++ b/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.3.0" targetFramework="net45" />
-  <package id="GitVersionTask" version="3.6.5" targetFramework="net45" developmentDependency="true" />
+  <package id="Nerdbank.GitVersioning" version="2.2.13" targetFramework="net45" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
   <package id="SpecFlow.CustomPlugin" version="1.9.0" targetFramework="net45" />
