--- a/VsIntegration/packages.config
+++ b/VsIntegration/packages.config
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GitVersion.CommandLine" version="3.6.5" targetFramework="net46" developmentDependency="true" />
-  <package id="GitVersionTask" version="3.6.5" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.VisualStudio.ComponentModelHost" version="14.0.25424" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Editor" version="14.3.25407" targetFramework="net46" />
@@ -27,6 +25,7 @@
   <package id="Microsoft.VisualStudio.Utilities" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
   <package id="MSBuildTasks" version="1.5.0.214" targetFramework="net46" developmentDependency="true" />
+  <package id="Nerdbank.GitVersioning" version="2.2.13" targetFramework="net46" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
   <package id="SpecFlow.CustomPlugin" version="1.9.0" targetFramework="net45" />
