Update icon for SpecFlowJson template

--- a/ItemTemplates/TechTalk.SpecFlow.VsIntegration.ItemTemplates.csproj
+++ b/ItemTemplates/TechTalk.SpecFlow.VsIntegration.ItemTemplates.csproj
@@ -152,11 +152,11 @@
       <SubType>Designer</SubType>
       <OutputSubPath>SpecFlow</OutputSubPath>
     </VSTemplate>
-    <Content Include="SpecFlowJson\SpecFlowStepDefinitionIcon.ico" />
     <VSTemplate Include="SpecFlowPlusRunner_Srprofile\SpecFlowPlusRunner_Srprofile_VB.vstemplate">
       <SubType>Designer</SubType>
       <OutputSubPath>SpecFlow</OutputSubPath>
     </VSTemplate>
+    <Content Include="SpecFlowJson\SpecFlowJsonIcon.ico" />
     <Content Include="SpecFlowPlusRunner_Srprofile\SpecFlowStepDefinitionIcon.ico" />
     <Content Include="SpecFlowStepDefinition_CSharp\SpecFlowStepDefinition1.cs" />
     <VSTemplate Include="SpecFlowStepDefinition_FSharp\SpecFlowStepDefinition_FSharp.vstemplate">
