move new method into separate class and add tests

--- a/UnitTests/IdeIntegration.UnitTests/TechTalk.SpecFlow.IdeIntegration.UnitTests.csproj
+++ b/UnitTests/IdeIntegration.UnitTests/TechTalk.SpecFlow.IdeIntegration.UnitTests.csproj
@@ -84,6 +84,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileSystemTests.cs" />
     <Compile Include="GeneratorServicesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
