--- a/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
+++ b/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
@@ -150,6 +150,8 @@
     <Compile Include="ProcessHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Generator\RemoteGeneratorServices.cs" />
+    <Compile Include="Services\FileSystem.cs" />
+    <Compile Include="Services\IFileSystem.cs" />
     <Compile Include="Tracing\FileTracer.cs" />
     <Compile Include="Tracing\IIdeTracer.cs" />
     <Compile Include="Tracing\NullIdeTracer.cs" />
