add IAnalyticsTransmitter and events to IdeIntegration

--- a/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
+++ b/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
@@ -102,6 +102,10 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Analytics\ErrorAnalyticsEvent.cs" />
+    <Compile Include="Analytics\IAnalyticsEvent.cs" />
+    <Compile Include="Analytics\IAnalyticsTransmitter.cs" />
+    <Compile Include="Analytics\LogonAnalyticsEvent.cs" />
     <Compile Include="Bindings\IdeBindingSourceProcessor.cs" />
     <Compile Include="Bindings\ILBindingRegistryBuilder.cs" />
     <Compile Include="Configuration\AppConfig\AppConfigConfigurationLoader.cs" />
