--- a/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
+++ b/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
@@ -39,11 +39,6 @@
     <RootNamespace>TechTalk.SpecFlow.VsIntegration</RootNamespace>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(VisualStudioVersion)' == '12'">
-    <AssemblyName>TechTalk.SpecFlow.VsIntegration.2013</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <StartProgram>C:\Program Files %28x86%29\Microsoft Visual Studio 12.0\Common7\IDE\devenv.exe</StartProgram>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(VisualStudioVersion)' == '14'">
     <AssemblyName>TechTalk.SpecFlow.VsIntegration.2015</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -53,6 +48,11 @@
     <AssemblyName>TechTalk.SpecFlow.VsIntegration.2017</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <StartProgram>C:\Program Files %28x86%29\Microsoft Visual Studio\2017\Enterprise\Common7\IDE\devenv.exe</StartProgram>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(VisualStudioVersion)' == '16'">
+    <AssemblyName>TechTalk.SpecFlow.VisualStudioIntegration</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <StartProgram>C:\Program Files %28x86%29\Microsoft Visual Studio\2019\Preview\Common7\IDE\devenv.exe</StartProgram>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -321,7 +321,6 @@
     <Compile Include="TestRunner\ReSharper6GatewayLoader.cs" />
     <Compile Include="TestRunner\SpecRunConstants.cs" />
     <Compile Include="TestRunner\SpecRunGatewayLoader.cs" />
-    <Compile Include="TestRunner\SpecRunTestMethodResolver.cs" />
     <Compile Include="TestRunner\SpecRunTestRunnerGatewayLoader.cs" />
     <Compile Include="TestRunner\SpecRunWithVsTestExplorerGatewayLoader.cs" />
     <Compile Include="TestRunner\TestRunnerGatewayProvider.cs" />
