--- a/UnitTests/IdeIntegration.UnitTests/packages.config
+++ b/UnitTests/IdeIntegration.UnitTests/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.3.1" targetFramework="net45" />
   <package id="FluentAssertions" version="3.2.2" targetFramework="net45" />
-  <package id="Moq" version="4.0.10827" requireReinstallation="True" />
-  <package id="NUnit" version="3.10.1" targetFramework="net46" />
-  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net46" />
+  <package id="Moq" version="4.10.1" targetFramework="net45" />
+  <package id="NUnit" version="3.11.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net45" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
   <package id="SpecFlow.CustomPlugin" version="1.9.0" targetFramework="net45" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net45" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net45" />
 </packages>
