--- a/VsIntegration/packages.config
+++ b/VsIntegration/packages.config
@@ -4,16 +4,18 @@
   <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26201" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Editor" version="15.0.26201" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26201" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.26930" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Language.Intellisense" version="15.0.26201" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.8.36" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Shell.14.0" version="14.3.25407" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="10.0.30319" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="11.0.50727" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Immutable.12.0" version="12.0.21003" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Immutable.14.0" version="14.3.25407" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.16" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.15.0" version="15.0.26201" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26201" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6072" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.10.0" version="10.0.30320" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="11.0.61031" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.12.0" version="12.0.30111" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime" version="14.3.26929" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50728" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Text.Data" version="15.0.26201" targetFramework="net472" />
